--- a/src/Server/Dockerfile
+++ b/src/Server/Dockerfile
@@ -7,14 +7,14 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["src/Server/Server.csproj", "src/Server/"]
-COPY ["src/Domain/Domain.csproj", "src/Domain/"]
-COPY ["src/Application/Application.csproj", "src/Application/"]
+COPY ["Server/Server.csproj", "src/Server/"]
+COPY ["Domain/Domain.csproj", "src/Domain/"]
+COPY ["Application/Application.csproj", "src/Application/"]
 COPY ["Shared/Shared.csproj", "Shared/"]
-COPY ["src/Client/Client.csproj", "src/Client/"]
+COPY ["Client/Client.csproj", "src/Client/"]
 RUN dotnet restore "src/Server/Server.csproj"
 COPY . .
-WORKDIR "/src/src/Server"
+WORKDIR "Server"
 RUN dotnet build "Server.csproj" -c Release -o /app/build
 
 FROM build AS publish
